# FinancialAssetAnalyst

./: .gitignore  README.md  main.py  pyproject.toml
src/: agent.py  tools.py
src/app/: agent.py  tools.py
src/test/: test_tools.py
