[project]
name = "btcanalystagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain==0.3.0",
    "langchain-core==0.3.0",
    "langchain-ollama==0.2.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "yfinance>=0.2.0",
    "numpy>=1.24.0",
    "keyboard>=0.13.5",
]
